--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,12 +8,15 @@
 @layer utilities {
   .md {
     h1{@apply font-jost text-orange-400 text-h1 font-semibold }
-    h2{@apply font-jost text-orange-400 text-h2 font-semibold w-5/6 mx-auto}
-    h3{@apply font-jost text-orange-400 text-h3 font-semibold w-5/6 mx-auto}
-    p{@apply font-bitter text-gray-900 text-p2 leading-normal w-5/6  mx-auto}
+    h2{@apply font-jost text-orange-400 text-h2 font-semibold w-full px-2 md:w-5/6 md:px-0 mx-auto py-4}
+    h3{@apply font-jost text-orange-400 text-h3 font-semibold w-full px-2 md:w-5/6 md:px-0 mx-auto py-2}
+    p{@apply font-bitter text-gray-900 text-p2 leading-normal w-full px-2 md:w-5/6 md:px-0  mx-auto py-2}
+    /* img{@apply max-h-[32rem] mx-auto} */
     a{@apply hover:text-emerald-400}
+    ol{@apply w-5/6 mx-auto pl-6 list-decimal}
+    ul{@apply w-5/6 mx-auto pl-6 list-disc}
     blockquote{
-      @apply border-l-emerald-400 border-l-4 p-4
+      @apply border-l-emerald-400 w-4/6 mx-auto  md:px-0 border-l-4 my-4
     }
   }
 }
