--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 @layer utilities {
-  .md {
+  .markdown {
     h1{@apply font-jost text-orange-400 text-h1 font-semibold }
     h2{@apply font-jost text-orange-400 text-h2 font-semibold w-full px-2 md:w-5/6 md:px-0 mx-auto py-4}
     h3{@apply font-jost text-orange-400 text-h3 font-semibold w-full px-2 md:w-5/6 md:px-0 mx-auto py-2}
