--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@
     h3{@apply font-jost text-orange-400 text-h3 font-semibold w-full px-2 md:w-5/6 md:px-0 mx-auto py-2}
     p{@apply font-bitter text-gray-900 text-p2 leading-normal w-full px-2 md:w-5/6 md:px-0  mx-auto py-2}
     /* img{@apply max-h-[32rem] mx-auto} */
-    a{@apply hover:text-emerald-400}
+    a{@apply text-blue-400 hover:text-emerald-400}
     ol{@apply w-5/6 mx-auto pl-6 list-decimal}
     ul{@apply w-5/6 mx-auto pl-6 list-disc}
     blockquote{
